<resources>
    <string name="app_name">Money Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_expense_title">Enter expense title</string>
    <string name="accept">Accept</string>
    <string name="date_range">From %1$s to %2$s</string>
    <string name="all_categories">All Categories</string>
    <string name="preference_file_key" translatable="false">money_manager_001</string>
    <string name="welcome_text">Welcome to money manager!</string>
    <string name="empty_statistic">You don\'t have any records yet</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="exit">Cancel</string>
    <string name="total_spent_this_month">Total spent this month</string>
    <string name="watch_your_goals">Watch your goals!</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="expenses">EXPENSES</string>
    <string name="goals">GOALS</string>
    <string name="setting">SETTING</string>
    <string name="pending">Pending</string>
    <string name="enter_transaction_name">Enter transaction name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_amount">Enter amount</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_category">Choose category</string>
    <string name="save">Save</string>
    <string name="no_data_this_month">You don\'t have any data yet this month!</string>
    <string name="this_month">This Month</string>
    <string name="amount_spent_this_month">Amount spent this month</string>
    <string name="spending_of_months">Spending of the months</string>
    <string name="choose_year">Choose year</string>
    <string name="choose_month">Choose month</string>
    <string name="transaction_times">%1$d times</string>
    <string name="of_your_spendings">of your spendings</string>
    <string name="date_2">Date:</string>
    <string name="expense_title">Expense title:</string>
    <string name="description">Description</string>
    <string name="total">Total</string>
    <string name="expense_title_2">Expense Title</string>
    <string name="amount">Amount</string>
    <string name="time_helper_text">Enter in the following format: 24/08/1997</string>
    <string name="description_2">Description</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="medicine">Medicine</string>
    <string name="shopping">Shopping</string>
    <string name="device">Device</string>
    <string name="commuting">Commuting</string>
    <string name="drink">Drink</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="haircut">Haircut</string>
    <string name="repair">Repair</string>
    <string name="others">Others</string>
    <string name="your_monthly_goal">Your Monthly Goal</string>
    <string name="about">About Us</string>
    <string name="updated_successfully">Updated successfully!</string>
    <string name="enter_goal_title">Enter your monthly spending limit</string>
    <string name="goal_share_preference_key" translatable="false">goal_share_preference_key</string>
    <string name="next">Next</string>
    <string name="about_mess" translatable="false">Version 1.0.4, released on August 25, 2024 by @wuocdat.\nPhone +84 817 717 845.\nEmail quocdatpadpqn@gmail.com</string>
    <string name="percent_text" translatable="false">%1$d%%</string>
    <string name="lack_of_info">Please check the information again!</string>
    <string name="created_exp_successfully">Successfully created new expense!</string>
    <string name="date_format_invalid">Date format invalid</string>
    <string name="category_selection_item" translatable="false">Category item</string>
    <string name="range_date_picker_calendar">Select a date range from the calendar</string>
    <string name="filtered_expense_list">List of spending results</string>
    <string name="home_hidden" translatable="false">Home-hidden</string>
    <string name="history_hidden" translatable="false">History-hidden</string>
    <string name="expense_category_logo">category logo</string>
    <string name="selected_category_icon">Selected category icon</string>
    <string name="_20_apr_2023" translatable="false">20 Apr, 2023</string>
    <string name="two_dot" translatable="false">:</string>
</resources>