<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wuocdat.moneymanager.View.Fragment.EditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:text="@string/edit_expense"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/primary_color"
                android:textSize="36sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/expense_title_2"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/expense_title_length"
                app:startIconDrawable="@drawable/ic_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_fragment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/expense_title_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/description_2"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/description_length"
                app:startIconDrawable="@drawable/ic_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_fragment_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/description_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_fragment_amount_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/amount"
                app:startIconDrawable="@drawable/ic_money">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_fragment_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="@integer/money_amount_input_length" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/date"
                app:helperTextEnabled="true"
                app:helperText="@string/time_helper_text"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_fragment_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit_fragment_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/edit_fragment_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/exit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>