<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="4dp"
    android:paddingTop="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_category_root_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/item_category_container"
            android:layout_width="140dp"
            android:layout_height="@dimen/recommend_size"
            android:contentDescription="@string/category_selection_item"
            android:background="@color/red200"
            android:gravity="center_vertical"
            android:paddingHorizontal="4dp"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_category_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/red500"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/item_category_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:contentDescription="@string/expense_category_logo"
                    app:srcCompat="@drawable/ic_device"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/item_category_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:text="@string/commuting"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/item_category_check_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:contentDescription="@string/selected_category_icon"
                app:srcCompat="@drawable/ic_check"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>